force-app/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__Enable_Single_Category_Record_Processing__c.field-meta.xml
<CustomField>
    <fullName>LH__Enable_Single_Category_Record_Processing__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this is checked Lookup Helper will prevent duplicate parent category records from being created.</description>
    <inlineHelpText>If this is checked, Lookup Helper will prevent duplicate parent category records from being created.</inlineHelpText>
    <label>Enable Single Category Record Processing</label>
    <type>Checkbox</type>
</CustomField>