force-app/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__Suppress_Warning_Level_Errors__c.field-meta.xml
<CustomField>
    <fullName>LH__Suppress_Warning_Level_Errors__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, Lookup Helper will disable warning level LH Errors from being inserted into the system.</description>
    <inlineHelpText>If this is checked, Lookup Helper will disable warning level LH Errors from being inserted into the system.</inlineHelpText>
    <label>Suppress Warning Level Errors</label>
    <type>Checkbox</type>
</CustomField>