force-app/main/default/objects/LH__Lookup_Helper_App_Settings__c/fields/LH__Usage_of_Limits__c.field-meta.xml
<CustomField>
    <fullName>LH__Usage_of_Limits__c</fullName>
    <defaultValue>90</defaultValue>
    <inlineHelpText>Determines the percentage of limit usage at which Lookup Helper should switch to asynchronous processing.  It is generally not recommended to lower this value below 60%, and the default is 90%.</inlineHelpText>
    <label>Usage % of Limits</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>